--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "kafkajs": "^1.16.0",
     "node-rdkafka": "^2.12.0",
     "typescript": "^4.6.3"
   }
