--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:producer": "ts-node-dev ./producer/index.ts",
-    "start:consumer": "ts-node-dev ./consumer/index.ts"
+    "start:producer": "ts-node-dev ./src/producer/index.ts",
+    "start:consumer": "ts-node-dev ./src/consumer/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "kafkajs": "^1.16.0",
+    "kafkajs": "^2.0.2",
     "node-rdkafka": "^2.12.0",
     "typescript": "^4.6.3"
   }
